# FhirBridgeAI

./: .aider.chat.history.md  .env.example  .gitignore  AI-USAGE.md  CLAUDE.md  Dockerfile  Dockerfile.dashboard  Dockerfile.export  Dockerfile.generator  Dockerfile.ingestion  Dockerfile.worker  LICENSE  README.md  docker-compose.yml  enqueue_test_jobs.py  pyproject.toml  report_fhir.xml  requirements_core.txt  requirements_ocr.txt  requirements_synthetic.txt  test_rmq.py  test_tenacity.py
.agents/knowledge/: windows_powershell_rules.md  wsl_linux_execution_rules.md
.agents/workflows/: agentic-ci-loop.md  run-ci-locally.md
.github/workflows/: ci.yml
.streamlit/: config.toml
dashboard/: app.py
deploy/keycloak/: bootstrap.sh  realm-export.json
deploy/oauth2-proxy/: oauth2-proxy.cfg
deploy/traefik/: dynamic.yml
docs/: setup_continue_dev_rocm.md
docs/adr/: ADR-002-Inference-Engine.md  ADR-003-Ingestion-Layer.md  ADR-004-FHIR-Sink.md  ADR-005-S3-Claim-Check-Pattern.md  ADR-006-Principal-Architect-Review.md  ADR-006-Strict-S3-Claim-Check-and-Validation.md  ADR-007-LLM-Retry-Tenacity.md  ADR-008-Zero-Code-Delay-Pattern.md  ADR-012-Manual-Trace-Context-Propagation.md  (+18 more)
knowledge/: architecture_zones.md  fhirbridge_architecture.md  kdl_code_registry.md  parallel_agent_prompts.md  temporary_files_and_output.md
prometheus/: prometheus.yml  prometheus.yml.bak-20260520-215756
scripts/: MIGRATION_SUMMARY.md  check_pipeline_status.py  debug_extraction.py  generate_gina_lisa.py  generate_gina_schmidt.py  generate_pg_certs.sh  generate_synthetic_patients.py  trigger_e2e_pipeline.py
src/: verify_export.py
tests/: conftest.py  e2e_fire.py  runtime_fakes.py  test_anonymizer.py  test_architecture_guards.py  test_boundary_contracts.py  test_dashboard_read_model_endpoint.py  test_database_runtime.py  test_db_migration.py  test_evidence_harness.py  test_failure_triage.py  test_fhir_models.py  test_ingestion_endpoints.py  test_ingestion_saga_compensation.py  test_isik_models.py  test_legacy_blockade.py  test_llm_retry_client.py  test_llm_worker_routing.py  test_ocr_worker_async.py  test_outbox_dispatcher.py  test_payload.json  test_postgres_runtime_harness.py  test_pseudonymizer.py  test_qdrant_security.py  test_read_model_gate.py  test_review_endpoint.py  test_runtime_config.py  test_semantic_chunking.py  test_telemetry.py  test_token_exchange.py  test_worker_error_redaction.py
(+109 files in other folders)
