[project]
name = "fhirbridge-ai"
version = "0.1.0"
description = "Air-gapped, zero-trust LLM pipeline framework for KRITIS medical data."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "ollama>=0.1.0",
    "aio-pika",
    "pandas>=2.0.0",
    "fhir.resources>=7.1.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "boto3>=1.34.0",
    "aioboto3>=12.0.0",
    "PyJWT>=2.8.0",
    "faker",
]

[project.optional-dependencies]
ocr = [
    "pytesseract",
    "pdf2image",
    "opencv-python-headless",
    "Pillow",
    "numpy",
]
synthetic = [
    "reportlab",
    "pdf2image",
    "Pillow",
    "opencv-python-headless",
    "numpy",
]
dashboard = [
    "streamlit>=1.30.0",
    "streamlit-authenticator",
    "bcrypt",
]
dev = [
    "mypy",
    "black",
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pytest-timeout",
    "prometheus-client",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "python-barcode",
    "faker",
    "qrcode",
    "pymupdf",
]
all = [
    "fhirbridge-ai[ocr,synthetic,dashboard,dev]",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "reportlab.*",
    "barcode.*",
    "fitz",
    "qrcode",
    "pytesseract",
    "aio_pika.*",
    "faker",
    "spacy",
    "spacy.*",
    "ollama",
    "llm_retry_client",
    "streamlit.*",
    "streamlit_authenticator",
]
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501", "E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: fast, service-free reviewer smoke tests",
    "integration: tests that require external services or a live runtime harness",
    "asyncio: async tests that require pytest-asyncio when selected",
]
